# hackTheTrack

./: .gitignore  README.md  devtools.cmd  pyproject.toml
src/: demo.py
src/hackthetrack/: statistics_logger.py
src/hackthetrack/dependencygraph/: __init__.py  components.py  network.py
src/hackthetrack/displib/: __init__.py  load_displib_instace.py  load_displib_instance.py
src/hackthetrack/timetablenetwork/: __init__.py  components.py  load_displib_instace.py  network.py
src/hackthetrack_tests/dependencygraph_test/: test_parse_displib.py
src/hackthetrack_tests/dependencygraph_test/data/: displib_testinstances_headway1.json
src/scripts/: assign_directions.py  demo.py  displib_mip.py  inspect_resource_occupation.py  load_and_convert_all_instances.py  objective_analysis.py  objective_schedule.py  solving_with_hexaly.py
