[tool.poetry]
name = "hackthetrack"
version = "0.1.0"
description = ""
authors = ["flfuchs <flfuchs@student.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
ugraph = { version = "^0.72.0", extras = ["plotting"] }

[tool.poetry.urls]
homepage = "https://www.ivt.ethz.ch/"

[tool.poetry.dev-dependencies]
isort = "~5.13.2"
black = "~24.10.0"
radon = "~6.0.1"
pylint = "~3.3.2"
mypy = "~1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
